--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -86,6 +86,10 @@
 /* ==   STYLING FORM KHUSUS TRACKING     == */
 /* ======================================== */
 
+h5 {
+  font-weight: normal;
+}
+
 .track-request-form {
   margin-top: 1.5rem;
   display: flex;
